--- a/pg1.html
+++ b/pg1.html
@@ -10,7 +10,7 @@
 <style>
 body {
     font-family: Arial, sans-serif;
-    background: #0974F1;
+    background: linear-gradient(to left, #9FCCFA, #0974F1);
     color: white;
     padding: 30px;
 }
