--- a/pg2.html
+++ b/pg2.html
@@ -10,7 +10,7 @@
 <style>
 body {
     font-family: Arial, sans-serif;
-    background: #0974F1;
+    background: linear-gradient(to right, #2c3e50, #3498db);
     color: white;
     padding: 30px;
 }
