Update header and footer for ASK festival

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@ footer {
 <body>
 
 <header id="header">
-    <h1 class="fw-bold">Ask-ICT-Room1</h1>
-    <p class="text-light">Interactive ICT Showcase</p>
+    <h1 class="fw-bold">ASK festival</h1>
+    <p class="text-light">room 3</p>
 </header>
 
 
@@ -126,7 +126,7 @@ footer {
 
     
 <footer class="text-light">
-    2026 ASK-ICT-Room-3 | Asia English School
+    2026 ASK festival room 3 | Asia English School
 </footer>
 
 </body>
